Fix welcome text printing on OS X.